Задание переделано